--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "rxjs": "^7.3.0",
     "typescript": "^4.3.5"
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "prettier": "^2.3.2"
   }
 }
